--- a/IDE/VC/DuneLegacy.vcxproj.filters
+++ b/IDE/VC/DuneLegacy.vcxproj.filters
@@ -144,9 +144,6 @@
     <ClInclude Include="..\..\include\CommandManager.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\ConcatIterator.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\config.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -939,6 +936,15 @@
     <ClInclude Include="stdafx.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\misc\sdl_support.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <!-- <ClInclude Include="..\..\include\fixmath\fix32_support.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\misc\sdl_support.h">
+      <Filter>include</Filter>
+    </ClInclude> -->
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\AStarSearch.cpp">
@@ -1122,9 +1128,6 @@
       <Filter>src\FileClasses</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\FileClasses\PictureFactory.cpp">
-      <Filter>src\FileClasses</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\FileClasses\PictureFont.cpp">
       <Filter>src\FileClasses</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\FileClasses\POFile.cpp">
@@ -1558,6 +1561,12 @@
     </ClCompile>
     <ClCompile Include="..\..\src\misc\Random.cpp">
       <Filter>src\misc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\FileClasses\TTFFont.cpp">
+      <Filter>src\FileClasses</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\players\CampaignAIPlayer.cpp">
+      <Filter>src\players</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
